--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Let us play</title>
 </head>
 <body>
     <div id="container">
-        <header></header>
+        <header>
+            <h1>LATEST</h1>
+        </header>
 
         <div id="box">
         <div id="box1"></div>
         <div id="box2"></div>
         <div id="box3"></div>
         </div>
-
 
         <footer></footer>
     </div>
