--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body>
     <div id="container">
         <header>
-            <h1>LATEST</h1>
+            <h1>LATES<span>T</span></h1>
         </header>
 
         <div id="box">
-        <div id="box1"></div>
+        <div id="box1">
+            <h2>hello</h2></div>
         <div id="box2"></div>
-        <div id="box3"></div>
+        <div id="box3">
+            <h2>world</h2>
+        </div>
         </div>
 
         <footer></footer>
