--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
             <h2>world</h2>
         </div>
         </div>
+        <div id="square">
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+            <div id="one"></div>
+        </div>
 
         <footer></footer>
     </div>
