41 percent update to the styles

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 
         <div id="box">
         <div id="box1">
-            <h2>hello</h2></div>
-        <div id="box2"></div>
+            <h2 id="reply1">I'm gud u</h2>
+            </div>
+        <div id="box2">
+              <h3>Everything live</h3>
+               <p id="response1">Hello ...</p>
+               <p id="response2">hi, how are you</p>
+               <p id="response1">I'm gud u</p>
+               <p id="response2">I'm als...</p>
+        </div>
         <div id="box3">
-            <h2>world</h2>
+            <h2 id="reply2">I'm als</h2>
         </div>
         </div>
         <div id="square">
