--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
         </div>
         <div id="square">
+            <div id="first"></div>
             <div id="one"></div>
             <div id="one"></div>
             <div id="one"></div>
@@ -38,8 +39,7 @@
             <div id="one"></div>
             <div id="one"></div>
             <div id="one"></div>
-            <div id="one"></div>
-            <div id="one"></div>
+            <div id="last"></div>
         </div>
 
         <footer></footer>
