some small updates

--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 <body>
     <div id="container">
         <header>
-            <h1>LATES<span>T</span></h1>
+            <h1>LATES<span id="te">T</span></h1>
         </header>
 
         <div id="box">
         <div id="box1">
             <h2 id="reply1">I'm gud u</h2>
+            <span id="keyboard">a</span>
+            <span id="keyboard">b</span>
+            <span id="keyboard">c</span>
+            <span id="keyboard">d</span>
+            <span id="keyboard">e</span>
+            <span id="keyboard">f</span>
+            <span id="keyboard">g</span>
+            <span id="keyboard">h</span>
+            <span id="keyboard" >i</span>
+            <span id="keyboard">j</span>
+            <span id="keyboard">...</span>
             </div>
         <div id="box2">
               <h3>Everything live</h3>
@@ -26,6 +37,17 @@
         </div>
         <div id="box3">
             <h2 id="reply2">I'm als</h2>
+            <span id="keyboard">a</span>
+            <span id="keyboard">b</span>
+            <span id="keyboard">c</span>
+            <span id="keyboard">d</span>
+            <span id="keyboard">e</span>
+            <span id="keyboard">f</span>
+            <span id="keyboard">g</span>
+            <span id="keyboard">h</span>
+            <span id="keyboard">i</span>
+            <span id="keyboard">j</span>
+            <span id="keyboard">...</span>
         </div>
         </div>
         <div id="square">
